--- a/src/user/login/LoginSignupContainer.css
+++ b/src/user/login/LoginSignupContainer.css
@@ -41,8 +41,8 @@ h2 {
 }
 
 .center-login-signup-form {
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 15%;
+    padding-bottom: 15%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -69,8 +69,8 @@ span {
 
 .login-signup-button {
     border-radius: 20px;
-    border: 1px solid #FF4B2B;
-    background-color: #FF4B2B;
+    border: 1px solid #ffb300;
+    background-color: #ffb300;
     color: #FFFFFF;
     font-size: 12px;
     font-weight: bold;
@@ -185,9 +185,9 @@ button.ghost {
 }
 
 .overlay {
-    background: #FF416C;
-    background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-    background: linear-gradient(to right, #FF4B2B, #FF416C);
+    background: #fe7500;
+    background: -webkit-linear-gradient(to right, #eac82d, #fe7500);
+    background: linear-gradient(to right, #eac82d, #fe7500);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
