--- a/src/common/css/styles.css
+++ b/src/common/css/styles.css
@@ -30,7 +30,9 @@ body, html {
 .top_background {
   background-image: url(../../img/background/background-final.jpg);
 }
-
+.top_update_background{
+  background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/d9c99669696215.5b8a22fe3316f.jpg);
+}
 .home_top_background {
   background-image: url(../../img/background/home_background.jpg);
 }
@@ -38,7 +40,9 @@ body, html {
 .parallax.bottom_background {
   background-image: url(../../img/background/louis-hansel-shotsoflouis-B38CaCySh74-unsplash.jpg);
 }
-
+.parallax.bottom_background_update{
+background-image: url(https://c1.staticflickr.com/1/699/32361674505_1e1a1d56bf_o.jpg)
+}
 .nav {
   width: 100%;
   height: 65px;
