--- a/src/user/login/LoginSignupContainer.css
+++ b/src/user/login/LoginSignupContainer.css
@@ -115,7 +115,7 @@ button.ghost {
 .login-signup-container {
     align-self: center;
     background-color: #fff;
-    border: 2px solid #2098f3;
+    border: 2px solid #ffc419;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25),
     0 10px 10px rgba(0,0,0,0.22);
