--- a/src/diary/FoodStatCards.css
+++ b/src/diary/FoodStatCards.css
@@ -6,4 +6,13 @@
     flex-flow: wrap;
     margin: 5px;
     /* width: 50%; */
-  }
+}
+
+.cards_list {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
