--- a/src/diary/FoodStatCardsList.css
+++ b/src/diary/FoodStatCardsList.css
@@ -13,6 +13,7 @@
     height: 100%;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
