--- a/src/diary/Diary.css
+++ b/src/diary/Diary.css
@@ -1,6 +1,47 @@
+.form_field {
+    height: 35px;
+}
+
+.modal_body {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-image: url(../img/background/modal_background_3.jpg);
+}
+
+.add_diary_entry_container {
+    display: flex;
+    flex-direction: column;
+    flex-flow: column;
+    align-content: center;
+    margin: 10px;
+    border: 2px solid #856404;
+    padding: 10px;
+    background-color: #a40606;
+    background-image: linear-gradient(315deg, #a40606 0%, #d98324 74%);
+}
+
+.chosen_products_title {
+    word-wrap: break-word;
+    width: 100px;
+    font-size: 2rem;
+    letter-spacing: 6px;
+    text-align: justify-all;
+    padding-top: 80px;
+    background: -webkit-linear-gradient(#eee, #1c28ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 20px;
+}
+
 .diary-container {
+    display: flex;
+    width: 40%;
+    justify-content: center;
     text-align: center;
-    width: 50%;
+    background-image: url(../img/background/background_diary_1.jpg);
+    /*width: 50%;*/
 }
 
 .summary-container {
@@ -19,7 +60,7 @@
     background: #fff;
     box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
     border-radius: 2px;
-    width: 500px;
+    /*width: 100%;*/
     display: inline-block;
     margin-top: 30px;
     vertical-align: middle;
@@ -49,14 +90,29 @@
 
 .main_diary_card {
     display: inline-block;
+    align-self: center;
+    align-items: center;
+    align-content: center;
     border: 2px solid #856404;
     width: auto;
     margin: 50px;
 
-    background: #fe7500;
-    background: -webkit-linear-gradient(to right, #eac82d, #fe7500);
-    background: linear-gradient(to right, #eac82d, #fe7500);
-    background-repeat: no-repeat;
+    /*background: #fe7500;*/
+    /*background: -webkit-linear-gradient(to right, #eac82d, #fe7500);*/
+    /*background: linear-gradient(to right, #eac82d, #fe7500);*/
+    /*background-repeat: no-repeat;*/
+    background-image: url(../img/background/background_diary_1.jpg);
+
+    /*--rX: 0;*/
+    /*--rY: 0;*/
+    /*--bX: 40%;*/
+    /*--bY: 70%;*/
+    /*filter: contrast(1);*/
+    /*background: linear-gradient(hsla(0, 0%, 100%, .1), hsla(0, 0%, 100%, .1)),*/
+    /*url("https://i.pinimg.com/originals/0b/dd/0f/0bdd0f4a885cf076a4d7e0752c30ccd7.jpg");*/
+    /*background-size: 60rem auto;*/
+    /*background-position: var(--bX) var(--bY);*/
+    /*box-shadow: 0 0 3rem .5rem hsla(0, 0%, 0%, .2);*/
 }
 
 .datepicker_card_container {
