--- a/src/diary/Diary.css
+++ b/src/diary/Diary.css
@@ -13,6 +13,16 @@
     background-color: #a40606;
     background-image: linear-gradient(315deg, #a40606 0%, #d98324 74%);
 }
+.modal-header{
+    align-content: center;
+    color: #FFFFFF;
+    background-color: #424242;
+    border: 1px solid rgb(0, 0, 0);
+}
+.modal-footer{
+    background-color: #424242;
+    border: 1px solid rgb(0, 0, 0);
+}
 
 .chosen_products_title {
     word-wrap: break-word;
@@ -79,7 +89,11 @@
 .top_diary_background {
     background-image: url(../img/background/top_diary_background.jpg);
 }
-
+.outer{
+    width: 100%;
+    padding-top: 10rem;
+    height: 90rem;
+}
 .main_diary_card {
     min-height: 500px;
     min-width: 300px;
@@ -87,27 +101,30 @@
     align-self: center;
     align-items: center;
     align-content: center;
-    border: 2px solid #856404;
-    width: auto;
-    margin: 50px;
-    background-image: url(../img/background/background_diary_1.jpg);
+    width: 80%;
+    display: table;
+    margin: 0 auto;
 }
 
 .datepicker_card_container {
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .datepicker-container {
     margin: 5px;
-    /*display: flex;*/
-    /*justify-content: center;*/
+    height: 46px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border-radius: 6px;text-align: center;
+    background-color: #3e3e3e;
+    color: white;
 }
 
 .card-container {
-    padding: 50px;
-    display: flex;
     flex-direction: row;
     align-content: center;
 }
