--- a/src/diary/FoodStatCardsList.css
+++ b/src/diary/FoodStatCardsList.css
@@ -1,11 +1,12 @@
 .site-statistic-demo-card {
-    background: #ececec;
-    padding: 20px;
-    position: relative;
-    border: 2px solid #000000;
-    flex-flow: wrap;
     margin: 5px;
-    /* width: 50%; */
+    width: 100px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border-radius: 6px;text-align: center;
+    background-color: #3e3e3e;
+    color: white;
 }
 
 .cards_list {
@@ -16,4 +17,8 @@
     justify-content: center;
     flex-direction: row;
     align-items: center;
+}
+
+li {
+    display: flex;
 }
