--- a/src/diary/Diary.css
+++ b/src/diary/Diary.css
@@ -13,13 +13,15 @@
     background-color: #a40606;
     background-image: linear-gradient(315deg, #a40606 0%, #d98324 74%);
 }
-.modal-header{
+
+.modal-header {
     align-content: center;
     color: #FFFFFF;
     background-color: #424242;
     border: 1px solid rgb(0, 0, 0);
 }
-.modal-footer{
+
+.modal-footer {
     background-color: #424242;
     border: 1px solid rgb(0, 0, 0);
 }
@@ -40,6 +42,7 @@
 .diary-container {
     display: flex;
     width: 40%;
+    flex-direction: row;
     justify-content: center;
     text-align: center;
     background-image: url(../img/background/background_diary_1.jpg);
@@ -47,17 +50,18 @@
 }
 
 
-.food-stat{
+.food-stat {
     display: inline-block;
-    width: 100px;
     margin: 5px;
     padding: 10px 16px;
     font-size: 18px;
     line-height: 1.3333333;
-    border-radius: 6px;text-align: center;
+    border-radius: 6px;
+    text-align: center;
     background-color: #3e3e3e;
     color: white;
 }
+
 .summary-container {
     display: flex;
     width: 100%;
@@ -101,11 +105,13 @@
 .top_diary_background {
     background-image: url(../img/background/top_diary_background.jpg);
 }
-.outer{
+
+.outer {
     width: 100%;
     padding-top: 10rem;
     height: 90rem;
 }
+
 .main_diary_card {
     min-height: 500px;
     min-width: 300px;
@@ -131,7 +137,8 @@
     padding: 10px 16px;
     font-size: 18px;
     line-height: 1.3333333;
-    border-radius: 6px;text-align: center;
+    border-radius: 6px;
+    text-align: center;
     background-color: #3e3e3e;
     color: white;
 }
