--- a/src/user/profile/Profile.css
+++ b/src/user/profile/Profile.css
@@ -15,6 +15,22 @@
     font-size: 14px;
 }
 
+.profile__title__div {
+    background-color: rgba(72,68,68,0.6);
+    width: 100%;
+    margin-top: 4%;
+    margin-bottom: 2%;
+}
+
+.profile__intro {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
@@ -37,6 +53,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .profile-header-container {
+    color: white;
     font-weight: 500;
 }
 
@@ -55,6 +72,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #userProfileDataContainer {
+    color: white;
     text-align: left;
 }
 
@@ -90,6 +108,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .text-avatar {
+    color: white;
     width: 200px;
     height: 200px;
     margin: 0 auto;
