--- a/src/user/profile/Profile.css
+++ b/src/user/profile/Profile.css
@@ -20,11 +20,22 @@
     width: 100%;
     margin-top: 4%;
     margin-bottom: 2%;
+    padding-top: 10vh;
+    padding-bottom: 2px;
+}
+
+@media screen and (min-height: 670px) {
+    .profile__title__div {
+        padding-top: 5vh;
+    }
+}
+.no_top_margin{
+  margin-top: 0px;
 }
 
 .profile__intro {
     width: 100%;
-    height: 100vh;
+    height: 115vh;
     display: flex;
     align-items: center;
     justify-content: center;
