--- a/src/diary/Diary.css
+++ b/src/diary/Diary.css
@@ -108,7 +108,7 @@
 }
 
 .bottom_diary_background {
-    background-image: url(../img/background/bottom_diary_background.jpg);
+    background-image: url(https://phoode.com/blog/wp-content/uploads/2019/01/Julia-Sent-Scalped-Spanish-Pomegranates-from-Jewish-market.png);
 }
 
 .top_diary_background {
